[package]
name = "magus-supreme"
version = "0.1.0"
authors = ["Hasan Mukhlis {hzlntcld@gmail.com}"]
edition = "2021"
description = "An open-source web3 roguelike game"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
default-run = "client"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.7"
benimator = "3"
leafwing-input-manager = "0.3"
