[package]
name = "magus-supreme"
version = "0.1.0"
authors = ["Hasan Mukhlis <hzlntcld@gmail.com>"]
edition = "2021"
description = "An open-source web3 roguelike game"
license-file = "LICENSE"
default-run = "client"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
benimator = "3"
leafwing-input-manager = "0.3"
bevy_ecs_tilemap = "0.6.0"
tiled = "0.10.2"
anyhow = "1.0"
log = "0.4"
bevy_rapier2d = { version = "0.13", features = ["debug-render"] }
bevy_renet = "0.0.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.bevy]
version = "0.7"
default-features = false
features = [
    "bevy_winit",
    "filesystem_watcher",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "dynamic"
]
